# AQUAPHYTO

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: REFERENCE_DATASET_4_WP2_RT1_2025.csv  datacube_RT1_2025.npz
data/raw/: buiteveld_coeffs.csv
data/raw/RT1_2025/: PANTHYR_W_O1BE_L2A_REF_20250201T082153_270_20250201T133229_v20240912_QA_data.csv  PANTHYR_W_O1BE_L2A_REF_20250201T084154_270_20250201T133230_v20240912_QA_data.csv  PANTHYR_W_O1BE_L2A_REF_20250201T090151_270_20250201T133231_v20240912_QA_data.csv  PANTHYR_W_O1BE_L2A_REF_20250201T092208_270_20250201T133232_v20240912_QA_data.csv  PANTHYR_W_O1BE_L2A_REF_20250201T094150_270_20250201T133233_v20240912_QA_data.csv  PANTHYR_W_O1BE_L2A_REF_20250201T100151_270_20250201T133234_v20240912_QA_data.csv  PANTHYR_W_O1BE_L2A_REF_20250201T102230_270_20250201T133235_v20240912_QA_data.csv  PANTHYR_W_O1BE_L2A_REF_20250201T104150_270_20250201T133236_v20240912_QA_data.csv  PANTHYR_W_O1BE_L2A_REF_20250201T110208_270_20250201T133237_v20240912_QA_data.csv  PANTHYR_W_O1BE_L2A_REF_20250201T112144_225_20250201T133238_v20240912_QA_data.csv  PANTHYR_W_O1BE_L2A_REF_20250201T112315_270_20250201T133239_v20240912_QA_data.csv  PANTHYR_W_O1BE_L2A_REF_20250201T114145_225_20250201T133240_v20240912_QA_data.csv  PANTHYR_W_O1BE_L2A_REF_20250201T114317_270_20250201T133241_v20240912_QA_data.csv  (+2242 more)
notebooks/: 01_build_datacube.ipynb  02_make_dataset.ipynb  03_analysis_visualization.ipynb
phytospec/: __init__.py  algorithms.py  config.py  dataset.py  io.py  qc.py
