[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phytospec"
version = "0.1.0"
description = "Hyperspectral detection of coastal phytoplankton species from radiometer data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "See LICENSE" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["phytospec*"]
